fix dark mode

--- a/src/sass/layouts/_mobileMenu.scss
+++ b/src/sass/layouts/_mobileMenu.scss
@@ -29,12 +29,14 @@
   letter-spacing: 0.02em;
   margin-top: 0;
   margin-bottom: 302px;
+  li {
+    padding-right: 12px;
+  }
 
   &__item {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 6px 0 6px 16px;
     margin-bottom: 18px;
     height: 44px;
 
@@ -50,8 +52,8 @@
     background-size: cover;
     color: var(--white-color);
     margin: 0 -25px 18px -16px;
-    padding-left: 32px;
-    padding-right: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 }
 .menu-both {
